--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -188,7 +188,7 @@
           '</a>'+
           '</p>'+
           addArticleImg(aitem.img_list)+
-          '<div style="float: left;width: 200px;line-height: 45px;position: absolute;left: 446px;margin-top: 11px;">'+aitem.add_time+'</div>'+
+          '<div style="float: left;width: 200px;line-height: 37px;position: absolute;left: 446px;margin-top: 11px;">'+aitem.add_time+'</div>'+
           '</div>'+
           '</div>'+
           addBottom(aitem);
@@ -209,7 +209,7 @@
       }
       var html = '<ul id="adviser-info-ul" class="homepage-li clearfix" >';
       for (var j=0; j<imgList.length; j++) {
-        html += '<li><img src="'+ fn.imageThumb(imgList[j],'150x150') +'" ></li>';
+        html += '<li style="margin-top: 14px"><img src="'+ fn.imageThumb(imgList[j],'150x150') +'" ></li>';
       }
       html += '</ul>';
       return html;
