--- a/views/draft.html
+++ b/views/draft.html
@@ -19,7 +19,7 @@
     <div class="dui-layout-div"></div>
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
   </div>
-	<div class="dui-layout-lg clearfix" >
+	<div class="dui-layout-lg clearfix" style="margin-top: 20px;">
 	  <div class="dui-layout-silde ">
 	    <!-- =======顾问头像关注====== -->
       {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
