--- a/views/center_case_detail.html
+++ b/views/center_case_detail.html
@@ -14,10 +14,10 @@
  <!-- ====导航===== -->
  {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
  {{ new_nav_red.new_nav_red(helper) }}
-  <div class="dui-layout-lg clearfix" style="margin-top: 20px;">
-    <!-- ==广告1== -->
-    <div class="adviser-case-detail-map" id="AD_ADVISOR_CENTER_ARTICLEDETAIL_SEAT1">
-    </div>
+  <div class="dui-layout-lg clearfix banner-box">
+    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
+    <div class="dui-layout-div"></div>
+    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
   </div>
 <div class="dui-layout-lg clearfix dui-layout-padding" >
   <div class="dui-layout-silde ">
@@ -115,13 +115,33 @@
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script>
   $(function(){
+      $('.banner-box-left .slider').xSlider({
+          //轮播图配置
+//          autoplay : 500,
+          current: 0,
+          speed: 500,
+          intervalTime: 5000,
+          pagination: true
+      });
+      $('.banner-box-right .slider').xSlider({
+          //轮播图配置
+//          autoplay : 500,
+//            mode:'vertical',
+          current: 0,
+          speed: 1000,
+          intervalTime: 5000,
+          slidesPerView : 2,
+          slidesPerGroup : 2,
+//          pagination: true
+      });
     window._bd_share_config={
         "common":{
             "bdSnsKey":{},
