--- a/views/center_case.html
+++ b/views/center_case.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 {% include "header_new.html" %}
+<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css"/>
 <style>
     .right-cont{
         width: 878px;
@@ -114,6 +115,7 @@
   <script src="{{helper.cdnhost}}/assets/js/common/select.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bottom_comment.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>  
   <script>
     $(function() {
         function appendCase (caseArr) {
