--- a/views/center_main.html
+++ b/views/center_main.html
@@ -186,6 +186,7 @@
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
     $(function () {
         function limitDisplay(kaishi,changdu,maxLine,lastMonth){
