--- a/views/center_message.html
+++ b/views/center_message.html
@@ -92,6 +92,7 @@
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/select.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
     $(function () {
       //让分页器居中显示
