--- a/views/counsellor_personal.html
+++ b/views/counsellor_personal.html
@@ -137,6 +137,7 @@
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
   $(function(){
     $("#gerenjieshao").on("change",function(){
