--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -104,6 +104,7 @@
   .l_u_com_fen img{
     width: 32px;
     height: 32px;
+    cursor: pointer;
   }
 </style>
 <div class="l_u" style="display: none;">
