--- a/views/advisor_acount.html
+++ b/views/advisor_acount.html
@@ -132,6 +132,7 @@
 {% include "widget/new_footer/new_footer.html" %}
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
   $(document).ready(function () {
 
