--- a/views/center_article.html
+++ b/views/center_article.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 {% include "header_new.html" %}
+<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css"/>
 <!--[if lt IE 10]>
 <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
 <![endif]-->
