--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 {% include "header_new.html" %}
+<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css"/>
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
@@ -127,6 +128,7 @@
   <script src="{{helper.cdnhost}}/assets/js/common/select.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bottom_comment.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
   <script>
     $(function() {
         function appendCaseItem (citem) {
