--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -101,6 +101,7 @@
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/common/select.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
     $(function () {
       //让分页器居中显示
