--- a/views/counsellor_set.html
+++ b/views/counsellor_set.html
@@ -116,7 +116,7 @@
     </div>
   </div>
 </div>
-
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
   $(document).ready(function () {
 
