--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -5,12 +5,10 @@
   <title></title>
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css"/>
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0" rel="stylesheet">
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6">
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css" rel="stylesheet">
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/layer.css"/>
   {% include "header_new.html" %}
-  <script src="{{helper.cdnhost}}/assets/js/layer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
   <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
@@ -46,10 +44,10 @@
           </div>
           <div class="form-group clearfix">
             <div class="title"><span>*&nbsp;</span>验&nbsp;证&nbsp;码&nbsp;：</div>
-            <input  type="text" id="verify" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^\d{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <input  type="text" id="verify_binding" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^\d{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
             <div class="bind-button" style="width: 100px;float: left">
               <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
-              <input type="button" class="btn btn-primary" style="width: 100px;text-align: center;padding: 6px 2px;background: #fff;color: #c6a770;border: 1px solid #c6a770;border-radius: 3px;line-height: 0px" id="sendcun" value="发送验证码"/>
+              <input type="button" class="btn btn-primary" style="width: 100px;text-align: center;padding: 6px 2px;background: #fff;color: #c6a770;border: 1px solid #c6a770;border-radius: 3px;line-height: 0px" id="sendcun_binding" value="发送验证码"/>
             </div>
           </div>
           <input type="hidden" name="oauthid" id="oauthid" value="{{oauth_data.oauthid}}"/>
@@ -70,6 +68,7 @@
   </div>
 </div>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
   $(document).ready(function () {
 
@@ -92,11 +91,11 @@
       console.log('eeeee');
       fS.attachEvent('onclick', fangqis, false);
     }
-    var sP = document.getElementById('sendcun');
+    var sP = document.getElementById('sendcun_binding');
     if (sP.addEventListener) {
-      sP.addEventListener('click', sendphone, false)
+      sP.addEventListener('click', sendphone_bin, false)
     }else {
-      sP.attachEvent('onclick', sendphone, false)
+      sP.attachEvent('onclick', sendphone_bin, false)
     }
 
   })
@@ -117,7 +116,7 @@
       $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号码').popover({"trigger":"manual"}).popover("show");
       return
     }
-    if ($('#verify').val() === '') {
+    if ($('#verify_binding').val() === '') {
       layer.msg('请输入手机验证码');
       return
     }
@@ -155,7 +154,7 @@
 //    });
   }
 
-  function sendphone () {
+  function sendphone_bin () {
     if ($('#newEmail').val() === '') {
 //            let butp = document.getElementById('phone')
       $('#newEmail').parent().addClass("has-error").removeClass("has-success");
@@ -195,13 +194,13 @@
     var downcount = 60;
     var time = setInterval(function (){
       if (downcount === 0) {
-        $("#sendcun").attr("value", "发送验证码");
-        $("#sendcun").removeAttr("disabled");
+        $("#sendcun_binding").attr("value", "发送验证码");
+        $("#sendcun_binding").removeAttr("disabled");
         clearInterval(time);
         return
       }else {
-        $("#sendcun").attr("disabled", "disabled");
-        $("#sendcun").attr("value", downcount + "s");
+        $("#sendcun_binding").attr("disabled", "disabled");
+        $("#sendcun_binding").attr("value", downcount + "s");
         downcount--;
       }
     }, 1000);
