--- a/views/login/login.html
+++ b/views/login/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 {% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css"/>
+
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0"/>
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css"/>
@@ -100,6 +100,7 @@
   </div>
   <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_login.js" type="text/javascript" charset="utf-8"></script>
+  <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 
 
 </body>
