--- a/views/user_information.html
+++ b/views/user_information.html
@@ -119,6 +119,7 @@
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
   $(document).ready(function () {
     $("form").Vaild();
