--- a/views/adviser_photo_p.html
+++ b/views/adviser_photo_p.html
@@ -132,7 +132,7 @@
 </div>
 {% import "widget/new_slide/new_slide2.html" as  slide %}
 {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
-{% include "widget/footer/footer.html" %}
+{% include "widget/new_footer/new_footer.html" %}
 <script>
     var login_ss = null;
     if($.cookie('login_ss') != undefined){
