--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -207,7 +207,7 @@
       if(imgList==undefined){
         return '';
       }
-      var html = '<ul id="adviser-info-ul" class="homepage-li clearfix" >';
+      var html = '<ul>';
       for (var j=0; j<imgList.length; j++) {
         html += '<li style="margin-top: 14px"><img src="'+ fn.imageThumb(imgList[j],'150x150') +'" ></li>';
       }
