--- a/views/advisor_acount.html
+++ b/views/advisor_acount.html
@@ -88,9 +88,9 @@
 {{ new_nav_first.new_nav_first(helper) }}
 
 <div class="dui-layout-lg clearfix banner-box">
-  <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
+  <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
   <div class="dui-layout-div"></div>
-  <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
+  <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider2.html" %}</div>
 </div>
 <div class="dui-layout-lg clearfix">
   <div class="dui-layout-silde right">
