--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -14,9 +14,9 @@
  {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
  {{ new_nav_red.new_nav_red(helper) }}
   <div class="dui-layout-lg clearfix banner-box">
-    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
+    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
-    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
+    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider2.html" %}</div>
   </div>
 <div class="dui-layout-lg clearfix" >
   <div class="dui-layout-silde ">
