--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -52,9 +52,9 @@
 {{ new_nav_first.new_nav_first(helper) }}
 
 <div class="dui-layout-lg clearfix banner-box">
-    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
+    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
-    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
+    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider2.html" %}</div>
 </div>
 <div class="dui-layout-lg clearfix" style="margin-top: 20px;">
     <div class="dui-layout-silde">
