--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -168,9 +168,9 @@
 {{ new_nav_red.new_nav_red(helper) }}
 
 <div class="dui-layout-lg clearfix banner-box">
-    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
+    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
-    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
+    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider2.html" %}</div>
 </div>
 
 <div class="dui-layout-lg clearfix">
