--- a/views/draft.html
+++ b/views/draft.html
@@ -15,9 +15,9 @@
 	{% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
   {{ new_nav_first.new_nav_first(helper) }}
   <div class="dui-layout-lg clearfix banner-box">
-    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
+    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
-    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
+    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider2.html" %}</div>
   </div>
 	<div class="dui-layout-lg clearfix" style="margin-top: 20px;">
 	  <div class="dui-layout-silde ">
