--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -3,7 +3,7 @@
 <div class="new_nav_first_red">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
-            <a  target="_blank" href="{{ helper.urlgen() }}"><img src="{{helper.cdnhost}}/assets/img/logo_transparent.png" alt="金吉列留学官网"/></a>
+            <a  target="_blank" href="{{ helper.urlgen('') }}"><img src="{{helper.cdnhost}}/assets/img/logo_transparent.png" alt="金吉列留学官网"/></a>
         </div>
         <ul class="page-type">
             <li class="active"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li>
