--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -15,7 +15,7 @@
       {% else %}
       <p class="advisor-bumen" data-cityId ="" >分公司</p>
       {% endif %}
-      <p class="advisor-enjoy">{{ advisor.position_name if advisor.position_name else advisor.dept
+      <p class="advisor-enjoy">{{ advisor.position_name if advisor.position_name else '咨询顾问'
 }}</p>
     </dd>
   </dl>
