--- a/views/widget2/community_advisor/community_advisor.css
+++ b/views/widget2/community_advisor/community_advisor.css
@@ -47,6 +47,11 @@
   -webkit-background-size: cover;
   background-size: cover;
 }
+.community-advisor .advisor-img a{
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 .community-advisor .advisor-name{
   font-size: 18px;
   text-align: center;
