--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -133,7 +133,7 @@
             height: 100%;
             text-align: center;
             line-height: 292px;
-            color: #fff;
+            color: #C13232;
             font-size: 20px;
         }
         .banner-box{
