--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -16,12 +16,22 @@
     </ul>
   </div>
   <div class="homepage-title">
-    <p>{{item.title}}" <div>{{item.tag_list}}</div></p>
+    <p>
+    {% if item.type == 1 %}
+    <a target="_blank" href="{{helper.urlgen('case', item.id | string)}}" class="dui-text-warning" rel="nofollow">
+      {{item.title}}" <div>{{item.tag_list}}</div>
+    </a>
+    {% elif item.type == 2 %}
+    <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
+      {{item.title}}" <div>{{item.tag_list}}</div>
+    </a>
+    {% endif %}
+    </p>
   </div>
   <div class="homepage-p">
     <p>
       {% if item.type == 1 %}
-      <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'case='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
+      <a target="_blank" href="{{helper.urlgen('case', item.id | string)}}" class="dui-text-warning" rel="nofollow">
         {{item.introduce}} <span style="color: #C13232">【查看详情】</span>
       </a>
       {% elif item.type == 2 %}
@@ -29,13 +39,20 @@
         {{item.introduce}} <span style="color: #C13232">【查看详情】</span>
       </a>
       {% endif %}
-
     </p>
   </div>
   <ul class="homepage-li">
     {% for val in item.img_list %}
     <li>
-      <img src="{{helper.imageThumb(val,'150x150')}}" >
+      {% if item.type == 1 %}
+      <a target="_blank" href="{{helper.urlgen('case', item.id | string)}}" class="dui-text-warning" rel="nofollow">
+        <img src="{{helper.imageThumb(val,'150x150')}}" >
+      </a>
+      {% elif item.type == 2 %}
+      <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
+        <img src="{{helper.imageThumb(val,'150x150')}}" >
+      </a>
+      {% endif %}
     </li>
     {% endfor %}
   </ul>
