--- a/views/widget2/guess_like/guess_like.html
+++ b/views/widget2/guess_like/guess_like.html
@@ -8,7 +8,7 @@
           </a>
             <div class="likes-item" style="padding-top:12px;">
               <span class="people-name" style="margin-right:45px;margin-top:0;">{{item.user_info.realname }}</span>
-              <span class="people-action" style="margin-top:0">{{item.tag_list | substrs(5)}}</span>
+              <span class="people-action" style="margin-top:0">{{item.tag_list | stringSub()}}</span>
             </div>
             <a style="margin:20px 0 10px 0" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
               <div class="article">{{item.title}}</div>
