--- a/views/login/login.html
+++ b/views/login/login.html
@@ -39,7 +39,7 @@
   </style>
 
 <body>
-  {% include "widget/top/top.html" %}
+  {% include "widget/top/top_login.html" %}
 
   <div class="main" style="width: 1180px;margin: 0 auto;">
     {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
