--- a/views/center_main.html
+++ b/views/center_main.html
@@ -4,7 +4,8 @@
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/upload_photo.css"/>
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css"/>
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/upload_photo.css"/>
 <style>
     .pagination-box{
         float: left;
@@ -150,7 +151,7 @@
 
                     {% for item in collection_list.list %}
                         {% import "widget2/article/article.html" as article_show %}
-                        {{ article_show.article_show(item, helper) }}
+                        {{ article_show.adviser_show(item, helper) }}
                         {% include "widget2/bottom_comment/bottom_comment.html" %}
                     {% endfor %}
                 </div>
