--- a/views/index.html
+++ b/views/index.html
@@ -122,7 +122,7 @@
 </div>
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-{{ new_nav_first.new_nav_first(helper) }}
+{{ new_nav_first.new_nav_first(tdk,helper) }}
 <div class="main" style="width: 1200px;margin: 0 auto;">
   <!--轮播图-->
   <div class="lunbo">
