--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -1,4 +1,4 @@
-{% macro new_nav_first(helper) %}
+{% macro new_nav_first(tdk,helper) %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/views/widget/new_nav_first/new_nav_first.css" >
 <div class="new_nav_first_white">
     <div class="new_nav_first clearfix">
