--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -132,8 +132,10 @@
     function appendArticleItem(aitem) {
       var aItemHtml = '<div class="homepage">' +
           '<div class="homepagecon">' +
+          '<a target="_blank"  href="' + fn.urlgen("blog", aitem.uid.toString()) + '" >'+
           '<div class="homepageing" style="background:url(' + fn.avaterimg(aitem.uid, 'small', aitem.user_info.status, aitem.user_info.version) + ') no-repeat 0 0;background-size: 50px 50px;"></div>' +
           '<h3>' + aitem.user_info.realname + '<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>' +
+          '</a>'+
           '<ul>' +
           '<div class="bdsharebuttonbox bdshare-button-style0-16" style="margin-top: 12px;">' +
           '<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>' +
