--- a/views/about/about.html
+++ b/views/about/about.html
@@ -16,7 +16,7 @@
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(helper) }}
+{{ new_nav_red.new_nav_red(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix" style="margin: 20px auto;">
   <div class="dui-layout-lg about-guanggao" id="AD_PROFILE_SEAT1">
