--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -35,7 +35,7 @@
 {# 头部导航 #}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(helper) }}
+{{ new_nav_red.new_nav_red(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix">
   <p style="font-size: 14px;margin-left: 20px;margin-top: 20px;"><i class="iconfont" style="color: #C13232">&#xe60d;</i>>><span style="color: #C13232">留学消费教育特约专家</span></p>
