--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -10,7 +10,7 @@
  {% include "widget/top/top.html" %}
  <!-- ====导航===== -->
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(helper) }}
+{{ new_nav_red.new_nav_red(tdk,helper) }}
   <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
