--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -49,7 +49,7 @@
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-{{ new_nav_first.new_nav_first(helper) }}
+{{ new_nav_first.new_nav_first(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
