--- a/views/login/login.html
+++ b/views/login/login.html
@@ -43,7 +43,7 @@
 
   <div class="main" style="width: 1180px;margin: 0 auto;">
     {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-    {{ new_nav_first.new_nav_first(helper) }}
+    {{ new_nav_first.new_nav_first(tdk,helper) }}
   </div>
 
   <div class="login_overseas clearfix">
