--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -38,7 +38,7 @@
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(helper) }}
+{{ new_nav_red.new_nav_red(tdk,helper) }}
 
 <div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
