--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -73,7 +73,7 @@
 <body style="background: #f5f5f5">
   {% include "widget/top/top.html" %}
   {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-  {{ new_nav_first.new_nav_first(helper) }}
+  {{ new_nav_first.new_nav_first(tdk,helper) }}
 
 	<!-- ==广告1== -->
   <div class="dui-layout-lg clearfix banner-box">
