--- a/views/draft.html
+++ b/views/draft.html
@@ -13,7 +13,7 @@
 	{% include "widget/top/top.html" %}
 	<!-- ====导航===== -->
 	{% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-  {{ new_nav_first.new_nav_first(helper) }}
+  {{ new_nav_first.new_nav_first(tdk,helper) }}
   <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
