--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -13,7 +13,7 @@
 	{% include "widget/top/top.html" %}
 	<!-- ====导航===== -->
 	{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-  {{ new_nav_red.new_nav_red(helper) }}
+  {{ new_nav_red.new_nav_red(tdk,helper) }}
 	<div class="dui-layout-lg clearfix" style="margin-top: 20px;">
   	<!-- ==广告1== -->
   	<div class="rel-case-map" id="AD_{% if login_info.usertype ==2 %}ADVISOR{% elif login_info.usertype ==3 %}CANZAN{% endif %}_CENTER_ARTICLEEDIT_SEAT1">
