--- a/views/error.html
+++ b/views/error.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/branch_home_page.css" >
 <body>
 {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-{{ new_nav_first.new_nav_first(helper) }}
+{{ new_nav_first.new_nav_first(tdk,helper) }}
 <div class="error-con"><img src="{{helper.cdnhost}}/assets/img/404.png" alt=""></div>
 <p class="error-btn">
     <a  href="javascript:history.go(-1);" class="dui-btn btn-xlarge btn-appointment go-back-btn liuxue-back-btn">返回上页</a>
