--- a/views/so_article.html
+++ b/views/so_article.html
@@ -171,7 +171,7 @@
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(helper) }}
+{{ new_nav_red.new_nav_red(tdk,helper) }}
 <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
