--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
 <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper2.7.6.css" >
 <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper2.7.6.js"></script>
+<style>
+  .xuanze-chengshi p a:last-child{
+    margin-right: 0;
+  }
+</style>
 <body>
 {% if iparea %}
 {% else %}
