--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -204,7 +204,7 @@
       }
       var html = '<ul>';
       for (var j = 0; j < imgList.length; j++) {
-        html += '<li style="margin-top: 14px"><img src="' + fn.imageThumb(imgList[j], '150x150') + '" ></li>';
+        html += '<li style="margin-top: 14px"><img style="margin-right: 20px;float: left;" src="' + fn.imageThumb(imgList[j], '150x150') + '" ></li>';
       }
       html += '</ul>';
       return html;
