--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -253,7 +253,7 @@
         type: 'GET',
         datatype: 'json',
         data: {
-          order:"views desc",
+          order:"add_time desc",
           page: page,
           type: 1,
           per_page: per_page,
