--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -236,7 +236,7 @@
         type: 'GET',
         datatype: 'json',
         data: {
-          order:"views desc",
+          order:"add_time desc",
           page: page,
           type: 2,
           per_page: per_page,
