--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -243,7 +243,7 @@
         type: 'GET',
         datatype: 'json',
         data: {
-          order: "views desc",
+          order: "add_time desc",
           page: page,
           per_page: per_page,
           uid: thisObj.attr("data-uid")
