--- a/views/so_article.html
+++ b/views/so_article.html
@@ -94,6 +94,9 @@
         width: 172px;
         float: left;
     }
+    .result-item .item-adviser a{
+        color: #333;
+    }
     .result-item .item-adviser .adviser-avatar {
         width: 50px;
         height: 50px;
@@ -206,13 +209,15 @@
                     {% for item in article_list.list %}
                     <div class="result-item clearfix">
                         <div class="item-adviser">
-                            <a href="{{helper.articleUrlgen('blog',item.user_info.uid | string)}}"><img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt="" class="adviser-avatar"/></a><span>{{item.user_info.nickname}}</span><img src="../assets/img/1v.png" alt="" class="flag"/>
+                            <a href="{{helper.articleUrlgen('blog',item.user_info.uid | string)}}"><img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt="" class="adviser-avatar"/><span>{{item.user_info.nickname}}</span><img src="../assets/img/1v.png" alt="" class="flag"/></a>
                         </div>
                         <div class="item-info">
                             <div class="info-top clearfix">
                                 <a class="info-title" href="{{helper.articleUrlgen('blog',item.user_info.uid|string,'article='+item.id | string)}}">{{item.title}}</a>
                                 <div class="info-tags">
+                                    {% if item.tag_list %}
                                     <span>{{item.tag_list}}</span>
+                                    {% endif %}
                                 </div>
                             </div>
                             <div class="info-desc">{{item.introduce|ellipsis(90)}}<a href="{{helper.articleUrlgen('blog',item.user_info.uid|string,'article='+item.id | string)}}">【查看详情】</a></div>
@@ -278,9 +283,11 @@
                             '<div class="item-info">'+
                             '<div class="info-top clearfix">'+
                             '<a class="info-title" href="'+fn.articleUrlgen('blog',item.user_info.uid.toString(),'article='+item.id.toString())+'">'+ item.title +'</a>'+
-                        '<div class="info-tags">'+
-                        '<span>'+ item.tag_list +'</span>'+
-                    '</div>'+
+                        '<div class="info-tags">';
+                if (item.tag_list) {
+                    artHtml+='<span>'+ item.tag_list +'</span>';
+                }
+                artHtml+= '</div>'+
                     '</div>'+
                     '<div class="info-desc">'+ fn.ellipsis(item.introduce) +'<a href="'+fn.articleUrlgen('blog',item.user_info.uid.toString(),'article='+item.id.toString())+'">【查看详情】</a></div>'+
                 '<div class="time">'+ fn.getFormatDate(item.add_time,5) +'</div>'+
