--- a/views/so_article.html
+++ b/views/so_article.html
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                             <div class="info-desc">{{item.introduce|ellipsis(90)}}<a href="{{helper.articleUrlgen('blog',item.user_info.uid|string,'article='+item.id | string)}}">【查看详情】</a></div>
-                            <div class="time">{{item.add_time | getDefaultFormat('YYYY-MM-DD hh:mm:ss')}}</div>
+                            <div class="time">{{item.add_time | getDefaultFormat('YYYY-MM-DD HH:mm:ss')}}</div>
                         </div>
                     </div>
                     {% endfor %}
@@ -305,14 +305,15 @@
                 url: ajaxUrlPrefix.nodeapi + '/cmsapi/load_more_article',
                 datatype: 'json',
                 data: {
-                    key_word: keyword,
+                    key_word: encodeURI(keyword),
                     city_id: area,
-                    "per_page": per_page,
-                    "page": page,
-                    "order": order
+                    per_page: per_page,
+                    page: page,
+                    order: order
                 },
                 success: function (revmsg) {
                     if (revmsg.code == 0) {
+                        if (!revmsg.data.list) return;
                         var len = revmsg.data.list.length;
                         if (len == 0) {
                             thisObj.html('文章加载完毕')
